--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,15 @@ textarea {
     padding: 15px;
     resize: none;
     outline: none;
+    caret-color: transparent;
 
     box-shadow: 0px 0px 200px grey;
 
     transition: box-shadow 0.5s;
+}
+
+textarea:hover {
+    cursor: pointer;
 }
 
 textarea:focus {
