Create disabled textArea and start button for corresponding game state

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,10 @@ textarea {
     transition: box-shadow 0.5s;
 }
 
+textarea:disabled {
+    background-color: grey;
+}
+
 textarea:hover {
     cursor: pointer;
 }
